# swicli

./: .gitignore  CMakeLists.txt  INSTALL-Windows.txt  Makefile  Makefile.swi  README.md  README.txt  SWI-Prolog.h  SWICLI.sln  SWICLI2010.sln  Swicli.Library.rsp  api.html  documentation.html  from-disk.bat  install-linux.sh  local-test.sh  make-linux.sh  make-windows.bat  makeall.bat  mono_sysvars.sh  pack.pl  swicffi.pl  swicli.c  swicli.cproj  swicli.pl  swicli.vcproj  swicli.vcxproj  swicli32.c  swicli32.vcproj  uninstall-linux.sh
SWICFFITests/: SWICFFITests.cs  SWICFFITests.csproj
SWICLITestDLL/: NonDetExamples.cs  SWICLITestClass.cs  SWICLITestDLL.csproj
Swicli.Library/: Arrays.cs  AssemblyLoader.cs  ChangeLog.txt  ClassBuilder.cs  Coercion.cs  CoercionLayout.cs  Collections.cs  CycTypeInfo.cs  DelegateObjectInProlog.cs  DesignByContract.cs  EventHandlerInProlog.cs  Exceptions.cs  ForeignMethod.cs  GetSet.cs  IKVMClassLoader.cs  Init.cs  Instance.cs  Invoke.cs  LibPl.cs  LockInfo.cs  NativeMethods.cs  NonDetExamples.cs  NondetContextHandle.cs  ObjectArrays.cs  ObjectCoercion.cs  ObjectCoercionLayout.cs  ObjectCollections.cs  ObjectInstance.cs  ObjectTracker.cs  ObjectTypeSystem.cs  PInvokeDLL.cs  PInvokeMetaObject  PInvokeMetaObject.cs  PrologBackedDictionary.cs  PrologCLR.cs  PrologCLRExt.cs  PrologCLRInvoke.cs  PrologClient.cs  PrologClientThreads.cs  PrologGenericDelegate.cs  (+14 more)
Swicli.Library/Help/: SwiCsPl.shfb  introduction.htm  sitemap.sitemap
Swicli.Library/Properties/: AssemblyInfo.cs
api_files/: pldoc.css
c/: SWICLI.sln  SWICLI2008.sln  SWICLI2010.sln  SWICLI2012.sln  SWICLI32.sln  swicli.vcproj  swicli.vcxproj  swicli32.vcproj  swicli32.vcxproj
c/Example4SWICLI/: Example4SWICLI.XML  Example4SWICLI.csproj
c/SWICFFITests/: SWICFFITests.cs  SWICFFITests.csproj
c/SWICLITestDLL/: SWICLITestClass.cs  SWICLITestDLL.csproj
c/SWICLITestDLL/Properties/: AssemblyInfo.cs
c/Swicli.Library/: AssemblyLoader.cs  ClassBuilder.cs  Coercion.cs  CoercionLayout.cs  Collections.cs  ForeignMethod.cs  Init.cs  Instance.cs  Invoke.cs  LibPl.cs  NativeMethods.cs  PInvokeByEmit.cs  PInvokeMetaObject.cs  PrologCLR.cs  PrologClient.cs  RuntimeTypeInfo.cs  SWI-cs.cs  Swicli.Library.XML  Swicli.Library.csproj  Threads.cs  Tracker.cs  TypeSystem.cs
c/Swicli.Library/mindtouch.reflection/: IReflectedInfo.cs  ITypeInspector.cs  IsolatedTypeInspector.cs  Makefile  MemberAccess.cs  ParameterBuilder.cs  ReflectedConstructorInfo.cs  ReflectedFieldInfo.cs  ReflectedMethodInfo.cs  ReflectedParameterInfo.cs  ReflectedTypeInfo.cs  TypeInspector.cs
c/swicli/: swicli.c
cffi-tests/: libcurl.cffi  swi-prolog.cffi  winapi_dll.pl
doc/: api.html
lib/: Swicli.Library.XML
lib/amd64/: Swicli.Library.xml  swicli.dll.config
lib/i386-win32/: swicli32.lib
lib/x64-win64/: SWICFFITests.XML  swicli.dll.metagen  swicli.exp  swicli.lib
lib/x86_64-linux/: swicli.dll.config
prolog/: swicffi.pl  swicli.pl
src/: SWICLI2010.sln  swicli.vcproj  swicli.vcxproj  swicli.vcxproj.filters  swicli32.vcxproj  swicli32.vcxproj.filters  swicli64.vcxproj  swicliYap64.vcxproj
src/Example4SWICLI/: Example4SWICLI.cs  Example4SWICLI.csproj
src/Example4SWICLI/Properties/: AssemblyInfo.cs
src/ExampleCallsPrologSWICLI/: CodeMap1.dgml  ExampleCallsProlog.XML  ExampleCallsProlog.cs  ExampleCallsProlog.sln  ExampleCallsPrologSWICLI.csproj
src/PlConsole/: PlConsole.csproj  Program.cs
src/PlConsole/Properties/: AssemblyInfo.cs
src/SWICFFITests/: SWICFFITests-example.cs
src/SWICFFITests/Properties/: AssemblyInfo.cs
src/SWICLITestDLL/: SWICLITestClass.cs  SWICLITestDLL.csproj
src/Swicli.Library/: Arrays.cs  AssemblyLoader.cs  CMakeLists.txt  ClassBuilder.cs  Coercion.cs  CoercionLayout.cs  Collections.cs  DelegateObjectInProlog.cs  DesignByContract.cs  Embedded.cs  EventHandlerInProlog.cs  Exceptions.cs  ForeignMethod.cs  GenericDelegate.cs  GetSet.cs  IKVMClassLoader.cs  Init.cs  Instance.cs  Invoke.cs  JplSafeNativeMethods.cs  LibPl.cs  LockInfo.cs  NativeMethods.cs  NondetContextHandle.cs  PInvokeMetaObject.cs  PrologBackedDictionary.cs  PrologCLR.cs  PrologCLRExt.cs  PrologClient.cs  RuntimeTypeInfo.cs  SWI-cs-PlQuery.cs  SWI-cs.cs  SwiPlCs.csproj  Swicli.Library.csproj  Threads.cs  Tracker.cs  TypeSystem.cs  WaitUntilEvent.cs  app.config
src/Swicli.Library/Properties/: Resources.Designer.cs
src/Swicli.Library/mindtouch.reflection/: IGenericParameterProvider.cs  IReflectedInfo.cs  IsolatedTypeInspector.cs  ReflectedEventInfo.cs  ReflectedGenericParameterInfo.cs  ReflectedMemberInfo.cs  ReflectedParameterTypeInfo.cs  ReflectedPropertyInfo.cs  TypeInspector.cs  mindtouch.reflection.csproj
src/Swicli.Library/mindtouch.reflection/Properties/: AssemblyInfo.cs
src/ikvm-native/: native.8.vcxproj  native.8.vcxproj.filters
src/swicli/: swicli.c  swicli32.vcxproj  swicli32.vcxproj.filters  swicli64.vcxproj  swicli64.vcxproj.filters
src/swicli32/: CMakeLists.txt
src/swicli64/: CMakeLists.txt  swicli64.c
src/swicliYap/: swicliYap64.vcxproj
src/swicliYap64/: CMakeLists.txt  swicliYap64.c
